# konstruktor

./: .env.example  .gitattributes  .gitignore  README.md  ai_studio_code (3).html  docker-compose.yml  marketing.md  package.json  patch-vite-node.mjs  playwright.config.ts  preview-design.html  quiz-design.html  settings_design.html  tsconfig.base.json  turbo.json  vitest-out.txt  vitest.workspace.ts
.github/: copilot-instructions.md
apps/api/: Dockerfile  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: index.ts
apps/api/tests/: health.test.ts  packs.test.ts  setup.ts  tokens.test.ts
apps/crm/: index.html  package.json  vite.config.ts
apps/crm/src/: App.tsx  index.css  main.tsx
apps/desktop/: gen-icon.mjs  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: ai.rs  mod.rs  pack.rs  quizzes.rs  server.rs
apps/player/: capacitor.config.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: API_SPEC.md  ARCHITECTURE.md  DASHBOARD_REDESIGN_PLAN.md  DATABASE_SCHEMA.md  DEMO_AUDIT.md  DESIGN_AND_ANIMATION_AUDIT.md  MARKETING_DESIGN_AUDIT.md  PRODUCT_AUDIT_2026.md  RESPONSIVE_DESIGN.md  TDD_APPROACH.md  TECH_STACK.md
e2e/: tsconfig.json
e2e/crm/: dashboard.spec.ts  login.spec.ts  quiz-results.spec.ts
e2e/player/: home.spec.ts  setup.spec.ts
playwright-report/: index.html
(+53 files in other folders)
